@@ -1,4 +1,4 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.storage;
 
 import com.intellij.util.ArrayUtilRt;
@@ -60,12 +60,30 @@ public final class OneToManyPathsMapping extends AbstractStateStorage<String, Co
       return null;
     }
     else if (collection.isEmpty()) {
-      return Collections.emptyList();
+      return List.of();
     }
     else {
       String[] result = new String[collection.size()];
       for (int i = 0, size = collection.size(); i < size; i++) {
         result[i] = relativizer.toFull(collection.get(i));
+      }
+      return Arrays.asList(result);
+    }
+  }
+
+  @Override
+  public @Nullable Collection<@NotNull Path> getOutputs(@NotNull Path keyFile) throws IOException {
+    List<String> collection = (List<String>)super.getState(relativizer.toRelative(keyFile));
+    if (collection == null) {
+      return null;
+    }
+    else if (collection.isEmpty()) {
+      return List.of();
+    }
+    else {
+      Path[] result = new Path[collection.size()];
+      for (int i = 0, size = collection.size(); i < size; i++) {
+        result[i] = relativizer.toAbsoluteFile(collection.get(i));
       }
       return Arrays.asList(result);
     }
@@ -166,19 +184,21 @@ public final class OneToManyPathsMapping extends AbstractStateStorage<String, Co
   }
 
   private final class SourceToOutputMappingCursorImpl implements SourceToOutputMappingCursor {
-    private final Iterator<String> mySourceIterator;
+    private final Iterator<String> sourceIterator;
     private String sourcePath;
 
-    private SourceToOutputMappingCursorImpl(Iterator<String> sourceIterator) { mySourceIterator = sourceIterator; }
+    private SourceToOutputMappingCursorImpl(@NotNull Iterator<String> sourceIterator) {
+      this.sourceIterator = sourceIterator;
+    }
 
     @Override
     public boolean hasNext() {
-      return mySourceIterator.hasNext();
+      return sourceIterator.hasNext();
     }
 
     @Override
     public @NotNull String next() {
-      sourcePath = mySourceIterator.next();
+      sourcePath = sourceIterator.next();
       return sourcePath;
     }
 
